--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -5,13 +5,24 @@
         <title>ka-BOOM</title>
     </head>
     <body>
-        <ul class="menu">
+
+        <div class="table-container">
+            <div class="table-cell">
+                <div class="spinner">
+                    <div class="bounce1"></div>
+                    <div class="bounce2"></div>
+                    <div class="bounce3"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ul class="menu">
             <li><a href="#/view1">view1</a></li>
             <li><a href="#/view2">view2</a></li>
         </ul>
 
         <div ng-view></div>
 
-        <div>Angular seed app: v<span app-version></span></div>
+        <div>Angular seed app: v<span app-version></span></div -->
     </body>
 </html>
