Added splash screen during startup.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -6,12 +6,16 @@
     </head>
     <body>
 
-        <div class="table-container">
+        <div id="spinner-box" class="table-container">
             <div class="table-cell">
                 <div class="spinner">
-                    <div class="bounce1"></div>
-                    <div class="bounce2"></div>
-                    <div class="bounce3"></div>
+                    <img id="app-logo" src="logo.png">
+                    <span id="app-info">ka-BOOM 0.1.0</span>
+                    <span class="container">
+                        <div class="bounce1"></div>
+                        <div class="bounce2"></div>
+                        <div class="bounce3"></div>
+                    </span>
                 </div>
             </div>
         </div>
