Implemented prototype of frontend/backend bridge.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-        <div id="spinner-box" class="table-container">
+        <!-- div id="spinner-box" class="table-container">
             <div class="table-cell">
                 <div class="spinner">
                     <img id="app-logo" src="logo.png">
@@ -18,7 +18,7 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </div -->
 
         <!-- ul class="menu">
             <li><a href="#/view1">view1</a></li>
