--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,11 +1,7 @@
 <!doctype html>
-<html lang="en" ng-app="ka">
-    <head>
-        <meta charset="utf-8">
-        <title>ka-BOOM</title>
-    </head>
+<html lang="en">
+    <head><meta charset="utf-8"></head>
     <body>
-
         <!-- div id="spinner-box" class="table-container">
             <div class="table-cell">
                 <div class="spinner">
