Implemented basic movie grid.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,28 +1,5 @@
 <!doctype html>
 <html lang="en">
     <head><meta charset="utf-8"></head>
-    <body>
-        <!-- div id="spinner-box" class="table-container">
-            <div class="table-cell">
-                <div class="spinner">
-                    <img id="app-logo" src="logo.png">
-                    <span id="app-info">ka-BOOM 0.1.0</span>
-                    <span class="container">
-                        <div class="bounce1"></div>
-                        <div class="bounce2"></div>
-                        <div class="bounce3"></div>
-                    </span>
-                </div>
-            </div>
-        </div -->
-
-        <!-- ul class="menu">
-            <li><a href="#/view1">view1</a></li>
-            <li><a href="#/view2">view2</a></li>
-        </ul>
-
-        <div ng-view></div>
-
-        <div>Angular seed app: v<span app-version></span></div -->
-    </body>
+    <body><div id="content"></div></body>
 </html>
