--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <html lang="en">
     <head><meta charset="utf-8"></head>
-    <body><div id="wrapper"><div id="content"></div></div></body>
+    <body><div id="content"></div></body>
 </html>
