--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <html lang="en">
     <head><meta charset="utf-8"></head>
-    <body><div id="content"></div><div id="boom-poster-focus"></div></body>
+    <body><div id="content"><div id="boom-movie-grid-container"></div><div id="boom-movie-detail"></div></div><div id="boom-poster-focus"></div></body>
 </html>
