Changed CSS of movie detail page.

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -4,11 +4,11 @@
     <body><div class="spinner"><div class="double-bounce1"></div><div class="double-bounce2"></div></div><div id="content"><div id="boom-movie-grid-container"></div>
         <div id="boom-movie-detail">
             <div id="boom-movie-detail-left">
-                <div id="boom-movie-detail-poster"><img src="http://image.tmdb.org/t/p/original/6WYXT5jFs1aEKdpdTclS1bEY8IO.jpg"><div id="boom-movie-detail-play-button">PLAY</div></div>
+                <div id="boom-movie-detail-poster"><img><div id="boom-movie-detail-play-button">PLAY</div><div id="boom-movie-detail-audio-button">AUDIO</div><div id="boom-movie-detail-details-button">DETAILS</div></div>
             </div>
             <div id="boom-movie-detail-right">
-                <div id="boom-movie-detail-title">Avatar</div>
-                <div id="boom-movie-detail-description">Lorem ipsum.</div>
+                <div id="boom-movie-detail-title"></div>
+                <div id="boom-movie-detail-description"></div>
             </div>
             <div id="boom-movie-detail-shade"></div>
         </div>
