--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -1,16 +1,32 @@
 <!doctype html>
 <html lang="en">
     <head><meta charset="utf-8"></head>
-    <body><div class="spinner"><div class="double-bounce1"></div><div class="double-bounce2"></div></div><div id="content"><div id="boom-movie-grid-container"></div>
-        <div id="boom-movie-detail">
-            <div id="boom-movie-detail-left">
-                <div id="boom-movie-detail-poster"><img><div id="boom-detail-button-group"><div class="boom-detail-button" id="boom-movie-detail-play-button">PLAY</div><!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div --><div class="boom-detail-button" id="boom-movie-detail-details-button">DETAILS</div></div></div>
+    <body><div class="spinner"><div class="double-bounce1"></div><div class="double-bounce2"></div></div>
+        <div id="content">
+            <div id="boom-movie-config">
+                <div id="boom-config-button-group">
+                    <div class="boom-button" id="boom-config-exit-button">Exit to Desktop</div>
+                </div>
             </div>
-            <div id="boom-movie-detail-right">
-                <div id="boom-movie-detail-title"></div>
+            <div id="boom-movie-grid-container"></div>
+            <div id="boom-movie-detail">
+                <div id="boom-movie-detail-left">
+                    <div id="boom-movie-detail-poster">
+                        <img>
+                        <div id="boom-detail-button-group">
+                            <div class="boom-button" id="boom-movie-detail-play-button">PLAY</div>
+                            <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
+                            <div class="boom-button" id="boom-movie-detail-details-button">DETAILS</div>
+                        </div>
+                    </div>
+                </div>
+                <div id="boom-movie-detail-right">
+                    <div id="boom-movie-detail-title"></div>
+                </div>
+                <div id="boom-movie-detail-shade"></div>
+                <div id="boom-movie-detail-description"></div>
             </div>
-            <div id="boom-movie-detail-shade"></div>
-            <div id="boom-movie-detail-description"></div>
         </div>
-    </div><div id="boom-poster-focus"></div></body>
+        <div id="boom-poster-focus"></div>
+    </body>
 </html>
