--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -5,7 +5,12 @@
         <div id="content">
             <div id="boom-movie-config">
                 <div id="boom-config-button-group">
-                    <div class="boom-button" id="boom-config-exit-button">Exit to Desktop</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-exit" data-select-color="#ff4136"><i class="fa fa-fw fa-times"></i>Exit to Desktop</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-original-title-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: Original title</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-localized-title-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: English title</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-desc"></i>Sort by: Year (newest first)</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-asc"></i>Sort by: Year (oldest first)</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-rating-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-numeric-desc"></i>Sort by: Rating (highest first)</div>
                 </div>
             </div>
             <div id="boom-movie-grid-container"></div>
