--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -6,7 +6,7 @@
             <div id="boom-movie-config">
                 <div id="boom-config-button-group">
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-exit" data-select-color="#ff4136"><i class="fa fa-fw fa-times"></i>Exit to Desktop</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-localized-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: English title</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-localized-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: <span class="boom-localizable-adjective"></span> title</div>
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-original-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: Original title</div>
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-desc"></i>Sort by: Year (newest first)</div>
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-asc"></i>Sort by: Year (oldest first)</div>
