--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html>
     <head><meta charset="utf-8"></head>
-    <body><div class="spinner"><div class="double-bounce1"></div><div class="double-bounce2"></div></div>
+    <body>
         <div id="content">
             <div id="boom-movie-config">
                 <div id="boom-config-button-group">
