Re-enabled SSL.

--- a/frontend/app/html/boot.html
+++ b/frontend/app/html/boot.html
@@ -39,7 +39,7 @@
         </style>
         <script>
             window.onmessage = function (evt) {
-                if (evt.origin == 'http://127.0.0.1:' + ᴠ) {
+                if (evt.origin == 'https://127.0.0.1:' + ᴠ) {
                     var spinner = document.getElementById('spinner');
                     spinner.parentNode.removeChild(spinner);
 
