--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -16,13 +16,17 @@
             <div id="boom-movie-grid-container"></div>
             <div id="boom-movie-detail">
                 <div id="boom-movie-detail-left">
-                    <div id="boom-movie-detail-poster">
+                    <div id="boom-movie-detail-top">
                         <img>
                         <div id="boom-detail-button-group">
                             <div class="boom-button" id="boom-movie-detail-play-button">PLAY</div>
                             <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
                             <div class="boom-button" id="boom-movie-detail-details-button">DETAILS</div>
                         </div>
+                    </div>
+                    <div id="boom-movie-detail-bottom">
+                        <div id="boom-detail-release" class="boom-detail-info">Released in: <span></span></div>
+                        <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min.</div>
                     </div>
                 </div>
                 <div id="boom-movie-detail-right">
