Hide cursor in boot screen.

--- a/frontend/app/html/boot.html
+++ b/frontend/app/html/boot.html
@@ -3,7 +3,13 @@
     <head>
         <meta charset="utf-8">
         <style>
+            * {
+                cursor: none !important;
+                }
+
             body {
+                pointer-events: none !important;
+
                 color: white;
                 background-color: black;
 
