Implemented deferred calculation of primary poster color.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -37,5 +37,6 @@
             </div>
         </div>
         <div id="boom-poster-focus"></div>
+        <canvas id="boom-image-color-canvas"></canvas>
     </body>
 </html>
