--- a/frontend/app/html/config.html
+++ b/frontend/app/html/config.html
@@ -1,37 +1,36 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <style>
-            * {
-                cursor: none !important;
-                }
-
-            body {
-                color: white;
-                background-color: black;
-
-                margin: 0; padding: 0;
-                overflow: hidden;
-                width: 100%; height: 100%;
-                }
-        </style>
-        <script>
-            window.onmessage = function (evt) {
-                if (evt.origin ==  location.protocol + '//' + location.host) {
-                    var spinner = document.getElementById('spinner');
-                    spinner.parentNode.removeChild(spinner);
-
-                    var gui = document.getElementsByTagName('iframe')[0];
-                    gui.style.width = gui.style.height = '100%';
-                    gui.contentWindow.focus();
-
-                    evt.source.listen();
-                }
-            };
-        </script>
-    </head>
+    <head><meta charset="utf-8"></head>
     <body>
-        <div id="spinner"><div><img src="/loader.gif"></div></div>
+        <div id="content" class="boom-center-outer">
+            <div class="boom-center-inner">
+                <div id="boom-center-panel">
+                    <div id="boom-panel-description">
+                        As this is the first time you are starting this application, you must first choose<br>
+                        how to populate your movie library. Press LEFT or RIGHT to change your choice.
+                    </div>
+                    <div id="boom-split-choices">
+                        <div id="boom-choice-left">
+                            <div>
+                                Import supported movie files from your mounted drives.
+                                Press SPACE to select or deselect a drive.
+                            </div>
+                            <ul id="boom-drives-list">
+
+                            </ul>
+                        </div>
+                        <div id="boom-choice-right">
+                            <div>
+                                Import the IMDb Top 250 into the movie library. None of these movies
+                                will be playable, of course.
+                            </div>
+                            <ol id="boom-top250-list">
+
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
