--- a/frontend/app/html/config.html
+++ b/frontend/app/html/config.html
@@ -7,7 +7,7 @@
         <div id="boom-panel">
             <div id="boom-panel-description">
                 As this is the first time you are starting this application, you must first choose
-                how to populate your movie library. Press LEFT or RIGHT to make or change your choice.
+                how to populate your movie library. <span id="boom-demand-choice">Press LEFT or RIGHT</span> to make or change your choice.
             </div>
             <div id="boom-split-choices">
                 <div id="boom-choice-left" class="boom-choice-box">
