Changed configure description to be more generic.

--- a/frontend/app/html/configure.html
+++ b/frontend/app/html/configure.html
@@ -6,8 +6,7 @@
         <div class="boom-button-floater" id="boom-button-selection-floater"></div>
         <div id="boom-panel">
             <div id="boom-panel-description">
-                As this is the first time you are starting this application, you must first choose
-                how to populate your movie library. <span id="boom-demand-choice">Press LEFT or RIGHT</span> to make or change your choice.
+                Please choose how to populate your movie library. <span id="boom-demand-choice">Press LEFT or RIGHT</span> to make or change your choice.
             </div>
             <div id="boom-split-choices">
                 <div id="boom-choice-left" class="boom-choice-box">
