Added menu item to change config after initial setup.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -11,6 +11,7 @@
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-desc"></i>Sort by: Year (newest first)</div>
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-asc"></i>Sort by: Year (oldest first)</div>
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-rating-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-numeric-desc"></i>Sort by: Rating (highest first)</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-change-import" data-select-color="#0074d9"><i class="fa fa-fw fa-cogs"></i>Change movie import configuration</div>
                 </div>
             </div>
             <div id="boom-movie-grid-container"></div>
