Added trailer display prototype.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -23,11 +23,13 @@
                             <div class="boom-button" id="boom-movie-detail-play-button">PLAY</div>
                             <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
                             <div class="boom-button" id="boom-movie-detail-details-button">DETAILS</div>
+                            <div class="boom-button" id="boom-movie-detail-trailer-button">TRAILER</div>
                         </div>
                     </div>
                     <div id="boom-movie-detail-bottom">
                         <div id="boom-detail-release" class="boom-detail-info">Released in: <span></span></div>
                         <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min.</div>
+                        <div id="boom-detail-rating" class="boom-detail-info">Rating: <span></span>/10</div>
                     </div>
                 </div>
                 <div id="boom-movie-detail-right">
@@ -36,6 +38,7 @@
                 <div id="boom-movie-detail-shade"></div>
                 <div id="boom-movie-detail-description"></div>
             </div>
+            <iframe id="boom-movie-trailer" seamless="seamless"></iframe>
         </div>
         <div id="boom-poster-focus"></div>
         <canvas id="boom-image-color-canvas"></canvas>
