Added embedded trailer watching.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -21,9 +21,9 @@
                         <img>
                         <div id="boom-detail-button-group">
                             <div class="boom-button" id="boom-movie-detail-play-button">PLAY</div>
+                            <div class="boom-button" id="boom-movie-detail-trailer-button">TRAILER</div>
                             <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
                             <div class="boom-button" id="boom-movie-detail-details-button">DETAILS</div>
-                            <div class="boom-button" id="boom-movie-detail-trailer-button">TRAILER</div>
                         </div>
                     </div>
                     <div id="boom-movie-detail-bottom">
@@ -38,7 +38,7 @@
                 <div id="boom-movie-detail-shade"></div>
                 <div id="boom-movie-detail-description"></div>
             </div>
-            <iframe id="boom-movie-trailer" seamless="seamless"></iframe>
+            <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
         </div>
         <div id="boom-poster-focus"></div>
         <canvas id="boom-image-color-canvas"></canvas>
