Implemented display of third-party licenses.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -12,6 +12,7 @@
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-asc"></i>Sort by: Year (oldest first)</div>
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-rating-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-numeric-desc"></i>Sort by: Rating (highest first)</div>
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-change-import" data-select-color="#0074d9"><i class="fa fa-fw fa-cogs"></i>Change movie import configuration</div>
+                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-show-credits" data-select-color="#85144b"><i class="fa fa-fw fa-file-text-o"></i>Show third-party license information</div>
                 </div>
             </div>
             <div id="boom-movie-grid-container"></div>
@@ -41,6 +42,7 @@
             <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
         </div>
         <div id="boom-poster-focus"></div>
+        <div id="boom-credit-text"></div>
         <canvas id="boom-image-color-canvas"></canvas>
     </body>
 </html>
