--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -42,6 +42,7 @@
             <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
         </div>
         <div id="boom-poster-focus"></div>
+        <div id="boom-playback-wait">Please wait while the player software is being updated &hellip;</div>
         <div id="boom-credit-text"></div>
         <canvas id="boom-image-color-canvas"></canvas>
     </body>
