Implemented compiled movies popup.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -44,6 +44,9 @@
         <div id="boom-poster-focus"></div>
         <div id="boom-playback-wait">Please wait while the player software is being updated &hellip;</div>
         <div id="boom-credit-text"></div>
+        <div id="boom-boom-compilation-container">
+            <div id="boom-boom-compilation-grid"></div>
+        </div>
         <canvas id="boom-image-color-canvas"></canvas>
     </body>
 </html>
