Fixed IDs of compilation elements.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -44,8 +44,8 @@
         <div id="boom-poster-focus"></div>
         <div id="boom-playback-wait">Please wait while the player software is being updated &hellip;</div>
         <div id="boom-credit-text"></div>
-        <div id="boom-boom-compilation-container">
-            <div id="boom-boom-compilation-grid"></div>
+        <div id="boom-compilation-container">
+            <div id="boom-compilation-grid"></div>
         </div>
         <canvas id="boom-image-color-canvas"></canvas>
     </body>
