Added movable focus for compilation grid.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -47,6 +47,7 @@
         <div id="boom-compilation-container">
             <div id="boom-compilation-grid"></div>
         </div>
+        <div id="boom-compilation-focus"></div>
         <canvas id="boom-image-color-canvas"></canvas>
     </body>
 </html>
