Reverted label change.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -24,7 +24,7 @@
                             <div class="boom-button" id="boom-movie-detail-play-button">PLAY</div>
                             <div class="boom-button" id="boom-movie-detail-trailer-button">TRAILER</div>
                             <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
-                            <div class="boom-button" id="boom-movie-detail-details-button">STORY</div>
+                            <div class="boom-button" id="boom-movie-detail-details-button">DETAILS</div>
                         </div>
                     </div>
                     <div id="boom-movie-detail-bottom">
