Added detail screen browser prototype.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -37,6 +37,11 @@
                 <div id="boom-movie-detail-right">
                     <div id="boom-movie-detail-title"></div>
                 </div>
+                <div id="boom-movie-detail-head">
+                    <div id="boom-movie-detail-poster-browser"></div>
+                    <div id="boom-movie-detail-browser-info"></div>
+                    <div id="boom-movie-detail-browser-focus"></div>
+                </div>
                 <div id="boom-movie-detail-shade"></div>
                 <div id="boom-movie-detail-description"></div>
             </div>
