--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -22,10 +22,10 @@
                     <div id="boom-movie-detail-top">
                         <img>
                         <div id="boom-detail-button-group">
-                            <div class="boom-button" id="boom-movie-detail-play-button">PLAY</div>
-                            <div class="boom-button" id="boom-movie-detail-trailer-button">TRAILER</div>
+                            <div class="boom-button boom-enabled" id="boom-movie-detail-play-button">PLAY</div>
+                            <div class="boom-button boom-enabled" id="boom-movie-detail-trailer-button">TRAILER</div>
                             <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
-                            <div class="boom-button" id="boom-movie-detail-details-button">DETAILS</div>
+                            <div class="boom-button boom-enabled" id="boom-movie-detail-details-button">DETAILS</div>
                         </div>
                     </div>
                     <div id="boom-movie-detail-bottom">
@@ -37,11 +37,20 @@
                 <div id="boom-movie-detail-right">
                     <div id="boom-movie-detail-title"></div>
                 </div>
+                <img id="boom-movie-detail-poster-fade-in" width="1920" height="1080">
                 <div id="boom-movie-detail-head">
                     <div id="boom-movie-detail-poster-browser"></div>
-                    <div id="boom-movie-detail-browser-info"></div>
-                    <div id="boom-movie-detail-browser-focus"></div>
+                    <div id="boom-movie-detail-browser-info">
+                        <div id="boom-movie-detail-browser-title"></div>
+                        <div id="boom-movie-detail-browser-collection"></div>
+                        <ul id="boom-movie-detail-browser-additional">
+                            <li>Released in: <span></span></li>
+                            <li>Runtime: <span></span> min.</li>
+                            <li>Rating: <span></span>/10</li>
+                        </ul>
+                    </div>
                 </div>
+                <div id="boom-movie-detail-browser-focus"></div>
                 <div id="boom-movie-detail-shade"></div>
                 <div id="boom-movie-detail-description"></div>
             </div>
