Removed trailing dot from min(utes).

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -30,7 +30,7 @@
                     </div>
                     <div id="boom-movie-detail-bottom">
                         <div id="boom-detail-release" class="boom-detail-info">Released in: <span></span></div>
-                        <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min.</div>
+                        <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min</div>
                         <div id="boom-detail-rating" class="boom-detail-info">Rating: <span></span>/10</div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                         <div id="boom-movie-detail-browser-collection"></div>
                         <ul id="boom-movie-detail-browser-additional">
                             <li>Released in: <span></span></li>
-                            <li>Runtime: <span></span> min.</li>
+                            <li>Runtime: <span></span> min</li>
                             <li>Rating: <span></span>/10</li>
                         </ul>
                     </div>
