Append release year to movie title in detail browser.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -44,7 +44,7 @@
                         <div id="boom-movie-detail-browser-title"></div>
                         <div id="boom-movie-detail-browser-collection"></div>
                         <ul id="boom-movie-detail-browser-additional">
-                            <li>Released in: <span></span></li>
+                            <!-- li>Released in: <span></span></li -->
                             <li>Runtime: <span></span> min</li>
                             <li>Rating: <span></span>/10</li>
                         </ul>
