--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -2,7 +2,7 @@
 <html>
     <head><meta charset="utf-8"></head>
     <body>
-        <div id="content">
+        <!-- div id="content" -->
             <div id="boom-movie-config">
                 <div id="boom-config-button-group">
                     <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-exit" data-select-color="#ff4136"><i class="fa fa-fw fa-times"></i>Exit to Desktop</div>
@@ -55,7 +55,7 @@
                 <div id="boom-movie-detail-description"></div>
             </div>
             <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
-        </div>
+        <!-- /div -->
         <div id="boom-poster-focus"></div>
         <div id="boom-playback-wait">Please wait while the player software is being updated &hellip;</div>
         <div id="boom-credit-text"></div>
