--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -2,67 +2,71 @@
 <html>
     <head><meta charset="utf-8"></head>
     <body>
-        <!-- div id="content" -->
-            <div id="boom-movie-config">
-                <div id="boom-config-button-group">
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-exit" data-select-color="#ff4136"><i class="fa fa-fw fa-times"></i>Exit to Desktop</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-localized-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: <span class="boom-localizable-adjective"></span> title</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-original-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: Original title</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-desc"></i>Sort by: Year (newest first)</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-asc"></i>Sort by: Year (oldest first)</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-rating-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-numeric-desc"></i>Sort by: Rating (highest first)</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-budget-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-area-chart"></i>Sort by: Budget (largest first)</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-change-import" data-select-color="#0074d9"><i class="fa fa-fw fa-cogs"></i>Change movie import configuration</div>
-                    <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-show-credits" data-select-color="#85144b"><i class="fa fa-fw fa-file-text-o"></i>Show license information</div>
-                </div>
+
+        <div id="boom-movie-config">
+            <div id="boom-config-button-group">
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-exit" data-select-color="#ff4136"><i class="fa fa-fw fa-times"></i>Exit to Desktop</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-localized-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: <span class="boom-localizable-adjective"></span> title</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-original-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: Original title</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-desc"></i>Sort by: Year (newest first)</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-year-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-amount-asc"></i>Sort by: Year (oldest first)</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-rating-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-numeric-desc"></i>Sort by: Rating (highest first)</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-budget-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-area-chart"></i>Sort by: Budget (largest first)</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-change-import" data-select-color="#0074d9"><i class="fa fa-fw fa-cogs"></i>Change movie import configuration</div>
+                <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-show-credits" data-select-color="#85144b"><i class="fa fa-fw fa-file-text-o"></i>Show license information</div>
             </div>
-            <div id="boom-movie-grid-container"></div>
-            <div id="boom-movie-detail">
-                <div id="boom-movie-detail-left">
-                    <div id="boom-movie-detail-top">
-                        <img>
-                        <div id="boom-detail-button-group">
-                            <div class="boom-button boom-enabled" id="boom-movie-detail-play-button">PLAY</div>
-                            <div class="boom-button boom-enabled" id="boom-movie-detail-trailer-button">TRAILER</div>
-                            <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
-                            <div class="boom-button boom-enabled" id="boom-movie-detail-details-button">DETAILS</div>
-                        </div>
-                    </div>
-                    <div id="boom-movie-detail-bottom">
-                        <div id="boom-detail-release" class="boom-detail-info">Released in: <span></span></div>
-                        <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min</div>
-                        <div id="boom-detail-rating" class="boom-detail-info">Rating: <span></span>/10</div>
-                    </div>
-                </div>
-                <div id="boom-movie-detail-right">
-                    <div id="boom-movie-detail-title"></div>
-                </div>
-                <img id="boom-movie-detail-poster-fade-in" width="1920" height="1080">
-                <div id="boom-movie-detail-head">
-                    <div id="boom-movie-detail-poster-browser"></div>
-                    <div id="boom-movie-detail-browser-info">
-                        <div id="boom-movie-detail-browser-title"></div>
-                        <div id="boom-movie-detail-browser-collection"></div>
-                        <ul id="boom-movie-detail-browser-additional">
-                            <!-- li>Released in: <span></span></li -->
-                            <li>Runtime: <span></span> min</li>
-                            <li>Rating: <span></span>/10</li>
-                        </ul>
-                    </div>
-                </div>
-                <div id="boom-movie-detail-browser-focus"></div>
-                <div id="boom-movie-detail-shade"></div>
-                <div id="boom-movie-detail-description"></div>
-            </div>
-            <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
-        <!-- /div -->
-        <div id="boom-poster-focus"></div>
-        <div id="boom-playback-wait">Please wait while the player software is being updated &hellip;</div>
-        <div id="boom-credit-text"></div>
-        <div id="boom-compilation-container">
-            <div id="boom-compilation-grid"></div>
         </div>
+
+        <div id="boom-movie-grid-container"></div>
+        <div id="boom-poster-focus"></div>
+
+        <div id="boom-compilation-container"><div id="boom-compilation-grid"></div></div>
         <div id="boom-compilation-focus"></div>
+
+        <div id="boom-movie-detail">
+            <div id="boom-movie-detail-left">
+                <div id="boom-movie-detail-top">
+                    <img>
+                    <div id="boom-detail-button-group">
+                        <div class="boom-button boom-enabled" id="boom-movie-detail-play-button">PLAY</div>
+                        <div class="boom-button boom-enabled" id="boom-movie-detail-trailer-button">TRAILER</div>
+                        <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
+                        <div class="boom-button boom-enabled" id="boom-movie-detail-details-button">DETAILS</div>
+                    </div>
+                </div>
+                <div id="boom-movie-detail-bottom">
+                    <div id="boom-detail-release" class="boom-detail-info">Released in: <span></span></div>
+                    <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min</div>
+                    <div id="boom-detail-rating" class="boom-detail-info">Rating: <span></span>/10</div>
+                </div>
+            </div>
+            <div id="boom-movie-detail-right">
+                <div id="boom-movie-detail-title"></div>
+            </div>
+            <img id="boom-movie-detail-poster-fade-in" width="1920" height="1080">
+            <div id="boom-movie-detail-head">
+                <div id="boom-movie-detail-poster-browser"></div>
+                <div id="boom-movie-detail-browser-info">
+                    <div id="boom-movie-detail-browser-title"></div>
+                    <div id="boom-movie-detail-browser-collection"></div>
+                    <ul id="boom-movie-detail-browser-additional">
+                        <!-- li>Released in: <span></span></li -->
+                        <li>Runtime: <span></span> min</li>
+                        <li>Rating: <span></span>/10</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="boom-movie-detail-browser-focus"></div>
+            <div id="boom-movie-detail-shade"></div>
+            <div id="boom-movie-detail-description"></div>
+        </div>
+
+        <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
+
+        <div id="boom-playback-wait">Please wait while the player software is being updated &hellip;</div>
+
+        <div id="boom-credit-text"></div>
+
         <canvas id="boom-image-color-canvas"></canvas>
     </body>
 </html>
