Swapped poster and metadata position in detail browser.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -41,16 +41,17 @@
             </div>
             <img id="boom-movie-detail-poster-fade-in" width="1920" height="1080">
             <div id="boom-movie-detail-head">
-                <div id="boom-movie-detail-poster-browser"></div>
                 <div id="boom-movie-detail-browser-info">
                     <div id="boom-movie-detail-browser-title"></div>
                     <div id="boom-movie-detail-browser-collection"></div>
                     <ul id="boom-movie-detail-browser-additional">
-                        <!-- li>Released in: <span></span></li -->
-                        <li>Runtime: <span></span> min</li>
-                        <li>Rating: <span></span>/10</li>
+                        <li><span></span></li>
+                        <li><span></span>/10</li>
+                        <li><span></span> min</li>
+                        <li><span></span></li>
                     </ul>
                 </div>
+                <div id="boom-movie-detail-poster-browser"></div>
             </div>
             <div id="boom-movie-detail-browser-focus"></div>
             <div id="boom-movie-detail-shade"></div>
