Added action buttons to detail browser.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -50,6 +50,12 @@
                         <li><span></span> min</li>
                         <li><span></span></li>
                     </ul>
+                    <ul id="boom-movie-detail-browser-buttons">
+                        <li data-action="play" class="boom-active"><i class="fa fa-play"></i> play</li>
+                        <li data-action="trailer"><i class="fa fa-youtube"></i> trailer</li>
+                        <li data-action="details"><i class="fa fa-arrows"></i> details</li>
+                        <!-- li data-action="edit"><i class="fa fa-cogs"></i> edit</li -->
+                    </ul>
                 </div>
                 <div id="boom-movie-detail-poster-browser"></div>
             </div>
