Changed detail screen to display poster browser from the start.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -20,13 +20,12 @@
         <div id="boom-movie-grid-container"></div>
 
         <div id="boom-movie-detail">
-            <div id="boom-movie-detail-left">
+            <!-- div id="boom-movie-detail-left">
                 <div id="boom-movie-detail-top">
                     <img>
                     <div id="boom-detail-button-group">
                         <div class="boom-button boom-enabled" id="boom-movie-detail-play-button">PLAY</div>
                         <div class="boom-button boom-enabled" id="boom-movie-detail-trailer-button">TRAILER</div>
-                        <!-- div class="boom-detail-button" id="boom-movie-detail-audio-button">AUDIO</div -->
                         <div class="boom-button boom-enabled" id="boom-movie-detail-details-button">DETAILS</div>
                     </div>
                 </div>
@@ -35,10 +34,10 @@
                     <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min</div>
                     <div id="boom-detail-rating" class="boom-detail-info">Rating: <span></span>/10</div>
                 </div>
-            </div>
-            <div id="boom-movie-detail-right">
+            </div -->
+            <!-- div id="boom-movie-detail-right">
                 <div id="boom-movie-detail-title"></div>
-            </div>
+            </div -->
             <img id="boom-movie-detail-poster-fade-in" width="1920" height="1080">
             <div id="boom-movie-detail-head">
                 <div id="boom-movie-detail-browser-info">
