Added undesaturated waiting state when loading uncached backdrops.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -38,7 +38,9 @@
             <!-- div id="boom-movie-detail-right">
                 <div id="boom-movie-detail-title"></div>
             </div -->
-            <img id="boom-movie-detail-poster-fade-in" width="1920" height="1080">
+            <img id="boom-movie-detail-poster-background" class="boom-movie-detail-poster-loader" width="1920" height="1080" src="">
+            <img id="boom-movie-detail-poster-foreground" class="boom-movie-detail-poster-loader" width="1920" height="1080" src="">
+
             <div id="boom-movie-detail-head">
                 <div id="boom-movie-detail-browser-info">
                     <div id="boom-movie-detail-browser-title"></div>
