Tweaked layout of browser screen.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -46,10 +46,10 @@
                     <div id="boom-movie-detail-browser-title"></div>
                     <div id="boom-movie-detail-browser-collection"></div>
                     <ul id="boom-movie-detail-browser-additional">
-                        <li><span></span></li>
-                        <li><span></span>/10</li>
-                        <li><span></span> min</li>
-                        <li><span></span></li>
+                        <li id="boom-detail-release"><span></span></li>
+                        <li id="boom-detail-rating"><span></span></li>
+                        <li id="boom-detail-runtime"><span></span> min</li>
+                        <li id="boom-detail-genres"><span></span></li>
                     </ul>
                     <ul id="boom-movie-detail-browser-buttons">
                         <li data-action="play" class="boom-active"><i class="fa fa-play"></i> play</li>
