Tweaked browser screen action buttons.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -52,10 +52,10 @@
                         <li id="boom-detail-genres"><span></span></li>
                     </ul>
                     <ul id="boom-movie-detail-browser-buttons">
-                        <li data-action="play" class="boom-active"><i class="fa fa-play"></i> play</li>
-                        <li data-action="trailer"><i class="fa fa-youtube"></i> trailer</li>
-                        <li data-action="details"><i class="fa fa-arrows"></i> details</li>
-                        <!-- li data-action="edit"><i class="fa fa-cogs"></i> edit</li -->
+                        <li data-action="play" class="boom-active"><i class="fa fa-play"></i></li>
+                        <li data-action="trailer" class="boom-active"><i class="fa fa-youtube"></i></li>
+                        <li data-action="details" class="boom-active"><i class="fa fa-arrows-alt"></i></li>
+                        <li data-action="edit" class="boom-active"><i class="fa fa-cogs"></i></li>
                     </ul>
                 </div>
                 <div id="boom-movie-detail-poster-browser"></div>
