Changed play icon in movie browser.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -52,7 +52,7 @@
                         <li id="boom-detail-genres"><span></span></li>
                     </ul>
                     <ul id="boom-movie-detail-browser-buttons">
-                        <li data-action="play" class="boom-active"><i class="fa fa-play"></i></li>
+                        <li data-action="play" class="boom-active"><i class="fa fa-play-circle"></i></li>
                         <li data-action="trailer" class="boom-active"><i class="fa fa-youtube"></i></li>
                         <li data-action="details" class="boom-active"><i class="fa fa-arrows-alt"></i></li>
                         <li data-action="edit" class="boom-active"><i class="fa fa-cogs"></i></li>
