Added expansion of detail browser information.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -51,18 +51,19 @@
                         <li id="boom-detail-runtime"><span></span> min</li>
                         <li id="boom-detail-genres"><span></span></li>
                     </ul>
-                    <ul id="boom-movie-detail-browser-buttons">
+                    <div id="boom-detail-browser-description"></div>
+                    <!-- ul id="boom-movie-detail-browser-buttons">
                         <li data-action="play" class="boom-active"><i class="fa fa-play-circle"></i></li>
                         <li data-action="trailer" class="boom-active"><i class="fa fa-youtube"></i></li>
                         <li data-action="details" class="boom-active"><i class="fa fa-arrows-alt"></i></li>
                         <li data-action="edit" class="boom-active"><i class="fa fa-cogs"></i></li>
-                    </ul>
+                    </ul -->
                 </div>
                 <div id="boom-movie-detail-poster-browser"></div>
             </div>
             <div id="boom-movie-detail-browser-focus"></div>
-            <div id="boom-movie-detail-shade"></div>
-            <div id="boom-movie-detail-description"></div>
+            <!-- div id="boom-movie-detail-shade"></div>
+            <div id="boom-movie-detail-description"></div -->
         </div>
 
         <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
