Added expandable large poster mode to detail screen.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -60,6 +60,7 @@
                     </ul -->
                 </div>
                 <div id="boom-movie-detail-poster-browser"></div>
+                <img id="boom-detail-large-poster" src="">
             </div>
             <div id="boom-movie-detail-browser-focus"></div>
             <!-- div id="boom-movie-detail-shade"></div>
