Renamed GUI HTML elements for better clarity.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -20,31 +20,14 @@
         <div id="boom-movie-grid-container"></div>
 
         <div id="boom-movie-detail">
-            <!-- div id="boom-movie-detail-left">
-                <div id="boom-movie-detail-top">
-                    <img>
-                    <div id="boom-detail-button-group">
-                        <div class="boom-button boom-enabled" id="boom-movie-detail-play-button">PLAY</div>
-                        <div class="boom-button boom-enabled" id="boom-movie-detail-trailer-button">TRAILER</div>
-                        <div class="boom-button boom-enabled" id="boom-movie-detail-details-button">DETAILS</div>
-                    </div>
-                </div>
-                <div id="boom-movie-detail-bottom">
-                    <div id="boom-detail-release" class="boom-detail-info">Released in: <span></span></div>
-                    <div id="boom-detail-runtime" class="boom-detail-info">Runtime: <span></span> min</div>
-                    <div id="boom-detail-rating" class="boom-detail-info">Rating: <span></span>/10</div>
-                </div>
-            </div -->
-            <!-- div id="boom-movie-detail-right">
-                <div id="boom-movie-detail-title"></div>
-            </div -->
             <img id="boom-movie-detail-poster-background" class="boom-movie-detail-poster-loader" width="1920" height="1080" src="">
             <img id="boom-movie-detail-poster-foreground" class="boom-movie-detail-poster-loader" width="1920" height="1080" src="">
-
-            <div id="boom-movie-detail-head">
+            <div id="boom-detail-panel">
                 <div id="boom-movie-detail-browser-info">
-                    <div id="boom-movie-detail-browser-title"></div>
-                    <div id="boom-movie-detail-browser-collection"></div>
+                    <div id="">
+                        <div id="boom-movie-detail-browser-title"></div>
+                        <div id="boom-movie-detail-browser-collection"></div>
+                    </div>
                     <ul id="boom-movie-detail-browser-additional">
                         <li id="boom-detail-release"><span></span></li>
                         <li id="boom-detail-rating"><span></span></li>
@@ -52,24 +35,16 @@
                         <li id="boom-detail-genres"><span></span></li>
                     </ul>
                     <div id="boom-detail-browser-description"></div>
-                    <!-- ul id="boom-movie-detail-browser-buttons">
-                        <li data-action="play" class="boom-active"><i class="fa fa-play-circle"></i></li>
-                        <li data-action="trailer" class="boom-active"><i class="fa fa-youtube"></i></li>
-                        <li data-action="details" class="boom-active"><i class="fa fa-arrows-alt"></i></li>
-                        <li data-action="edit" class="boom-active"><i class="fa fa-cogs"></i></li>
-                    </ul -->
                 </div>
                 <div id="boom-movie-detail-poster-browser"></div>
-                <img id="boom-detail-large-poster" src="">
+                <img id="boom-detail-large-poster" width="300" height="450" src="">
             </div>
-            <div id="boom-movie-detail-browser-focus"></div>
-            <!-- div id="boom-movie-detail-shade"></div>
-            <div id="boom-movie-detail-description"></div -->
+            <div id="boom-detail-focus"></div>
         </div>
 
         <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
 
-        <div id="boom-poster-focus"></div>
+        <div id="boom-grid-focus"></div>
 
         <div id="boom-compilation-container"><div id="boom-compilation-grid"></div></div>
         <div id="boom-compilation-focus"></div>
