Renamed and tweaked detail browser elements.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -23,20 +23,20 @@
             <img id="boom-movie-detail-poster-background" class="boom-movie-detail-poster-loader" width="1920" height="1080" src="">
             <img id="boom-movie-detail-poster-foreground" class="boom-movie-detail-poster-loader" width="1920" height="1080" src="">
             <div id="boom-detail-panel">
-                <div id="boom-movie-detail-browser-info">
-                    <div id="">
-                        <div id="boom-movie-detail-browser-title"></div>
-                        <div id="boom-movie-detail-browser-collection"></div>
+                <div id="boom-detail-fields">
+                    <div id="boom-detail-primary">
+                        <div id="boom-detail-title"></div>
+                        <div id="boom-detail-collection"></div>
                     </div>
-                    <ul id="boom-movie-detail-browser-additional">
-                        <li id="boom-detail-release"><span></span></li>
-                        <li id="boom-detail-rating"><span></span></li>
-                        <li id="boom-detail-runtime"><span></span> min</li>
-                        <li id="boom-detail-genres"><span></span></li>
+                    <ul id="boom-detail-metadata">
+                        <li id="boom-detail-release"></li>
+                        <li id="boom-detail-rating"></li>
+                        <li id="boom-detail-runtime"></li>
+                        <li id="boom-detail-genres"></li>
                     </ul>
-                    <div id="boom-detail-browser-description"></div>
+                    <div id="boom-detail-storyline"></div>
                 </div>
-                <div id="boom-movie-detail-poster-browser"></div>
+                <div id="boom-detail-browser"></div>
                 <img id="boom-detail-large-poster" width="300" height="450" src="">
             </div>
             <div id="boom-detail-focus"></div>
