Added rotating large poster cube to detail browser for moving left/right in expanded mode.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -38,7 +38,8 @@
                 </div>
                 <div id="boom-detail-browser"></div>
                 <div id="boom-detail-focus"></div>
-                <img id="boom-detail-large-poster" width="300" height="450" src="">
+                <div id="boom-detail-poster-left"><img width="300" height="450" src=""></div>
+                <!-- img id="boom-detail-poster-right" width="300" height="450" src="" -->
             </div>
         </div>
 
