Renamed menu element.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -3,7 +3,7 @@
     <head><meta charset="utf-8"></head>
     <body>
 
-        <div id="boom-movie-config">
+        <div id="boom-menu">
             <div id="boom-config-button-group">
                 <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-exit" data-select-color="#ff4136"><i class="fa fa-fw fa-times"></i>Exit to Desktop</div>
                 <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-title-localized-asc" data-select-color="#2ecc40"><i class="fa fa-fw fa-sort-alpha-asc"></i>Sort by: <span class="boom-localizable-adjective"></span> title</div>
